@@ -138,3 +138,4 @@ T_288identify_files_by_amg:26ab0db90d72e28ad0ba1e22ee510510:passed:20110308-1518
 T_289wav_unsupported_formattag:3:passed:20110314-133958:0.020701503
 T_290seven_bytes_aac_codec_data:d8680e35f0f6b595dce0fcb8af3b6e9e:passed:20110415-123546:0.125981629
 T_291waveformatextensible:wav-avi:passed:20110415-124159:0.057127293
+T_292avi_aac_706d_privsize_huge:7b34a92c34461e869834e7db0c63ab97:passed:20110422-152313:0.042857788
